# routes/recipes.js
@@ -14,8 +14,10 @@ router.get("/showRecipe", async (req, res, next) => {
   try {
     const recipeId=req.query.recipe_id;
     const recipe = await recipes_utils.getRecipeShow(recipeId);
-    if(req.query.userName)
-      await user_utils.markAsView(req.query.userName,recipeId);
+    if (req.session && req.session.user_id) {
+      const userName = req.session.user_id;
+      await user_utils.markAsView(userName,recipeId);
+    }
     res.send(recipe);
   } catch (error) {
     next(error);
@@ -29,10 +31,11 @@ router.get("/randomRecipes",async(req,res,next)=>{
     let recipes_id_array=[]
     let views=[];
     let favorites=[];
-    if(req.query.userName){
+    if(req.session && req.session.user_id){
+      const userName = req.session.user_id;
       randomRecipes.map((element) => recipes_id_array.push(element.id));
-      views = await user_utils.getViewsId(recipes_id_array,req.query.userName);
-      favorites = await user_utils.getFavoritesId(recipes_id_array,req.query.userName);
+      views = await user_utils.getViewsId(recipes_id_array,userName);
+      favorites = await user_utils.getFavoritesId(recipes_id_array,userName);
     }
     res.status(200).send({ random:randomRecipes,view:views,favorite:favorites});
   }catch(error){
@@ -46,10 +49,11 @@ router.get("/search",async(req,res,next)=>{
     let views=[];
     let favorites=[];
     let recipes_id_array=[];
-    if(req.query.userName){
+    if(req.session && req.session.user_id){
+      const userName = req.session.user_id;
       recipes.map((element) => recipes_id_array.push(element.id));
-      views = await user_utils.getViewsId(recipes_id_array,req.query.userName);
-      favorites = await user_utils.getFavoritesId(recipes_id_array,req.query.userName);
+      views = await user_utils.getViewsId(recipes_id_array,userName);
+      favorites = await user_utils.getFavoritesId(recipes_id_array,userName);
     }
     res.status(200).send({ search:recipes,view:views,favorite:favorites});
   }catch(error){
@@ -59,27 +63,20 @@ router.get("/search",async(req,res,next)=>{
 
 router.post("/createRecipe/",async(req,res,next)=>{
   try{
-    let len=0;
-    const arr=await DButils.execQuery(`select count(*) as rid from recipes`);
-    if (arr)
-      len=arr[0].rid+1;
-    let a="";
-    if(req.body.owner)
-      a=`,'${req.body.owner}','${req.body.customaryPrepare}'`;
-    else a=",'',''";
-    await DButils.execQuery(`insert into recipes values (${len},'${req.body.recipeName}','${req.body.image}','${req.body.preparationTime}',${req.body.clickable},'${req.body.ingredients}','${req.body.preparationInstructions}',${req.body.numberOfDishes},${req.body.vegetarianOrVegan},${req.body.gluten}${a})`);
-    res.status(201).send({ message: `Recipe ${len} was created successfully`, success: true ,recipe_id: len});
-  }catch(error){
-    next(error);
-  }
-});
-
-router.post("/createRecipe/:userName/:recipe_id",async(req,res,next)=>{
-  try{
-      let flag=await user_utils.createRecipe(req.params.userName,req.params.recipe_id);
-      if (flag)
-        res.status(200).send("my recipe update");
-      else res.sendStatus(401);
+    if(req.session && req.session.user_id){
+      const userName = req.session.user_id;
+      let len=0;
+      const arr=await DButils.execQuery(`select count(*) as rid from recipes`);
+      if (arr)
+        len=arr[0].rid+1;
+      let a="";
+      if(req.body.owner)
+        a=`,'${req.body.owner}','${req.body.customaryPrepare}'`;
+      else a=",'',''";
+      await DButils.execQuery(`insert into recipes values (${len},'${req.body.recipeName}','${req.body.image}','${req.body.preparationTime}',${req.body.clickable},'${req.body.ingredients}','${req.body.preparationInstructions}',${req.body.numberOfDishes},${req.body.vegetarianOrVegan},${req.body.gluten}${a})`);
+      await user_utils.createRecipe(userName,len);
+      res.status(201).send({ message: `Recipe ${len} was created successfully`, success: true ,recipe_id: len});
+    }else res.sendStatus(401);
   }catch(error){
     next(error);
   }
